Corrected styling